--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,16 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_product_card: ^0.0.6
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/pictures/auralogo.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
